--- a/ImmiCanada/Views/NewsInterface/PartialNewsIndex.cshtml
+++ b/ImmiCanada/Views/NewsInterface/PartialNewsIndex.cshtml
@@ -6,7 +6,7 @@
         <div class="col-6 pos-rel">
             <img src="@News[0].Base64Image" class="img-fluid" />  @*<img src="../Content/images/tin-nhap-cu-1.jpg" class="img-fluid" />*@
             <div class="news-info">
-                <div>@News[0].Title</div>
+                <div class="image-title-link" onclick="window.location.href='/NewsInterface/Detail/@News[0].Id'">@News[0].Title</div>
                 <div class="row new-sec-info">
                     <div class="col-3">By Canada</div>
                     <div class="count-seen">@News[0].NumberOfView</div>
@@ -18,7 +18,7 @@
         <div class="col-6 pos-rel">
             <img src="@News[1].Base64Image" class="img-fluid" />
             <div class="news-info">
-                <div>@News[1].Title</div>
+                <div class="image-title-link" onclick="window.location.href='/NewsInterface/Detail/@News[1].Id'">@News[1].Title</div>
                 <div class="row new-sec-info">
                     <div class="col-3">By Canada</div>
 
@@ -33,7 +33,7 @@
         <div class="col-3 pos-rel">
             <img src="@News[2].Base64Image" class="img-fluid" />
             <div class="news-info">
-                <div>@News[2].Title</div>
+                <div class="image-title-link" onclick="window.location.href='/NewsInterface/Detail/@News[2].Id'">@News[2].Title</div>
                 <div class="row new-sec-info">
                     <div class="col-5">By Canada</div>
 
@@ -46,7 +46,7 @@
         <div class="col-3 pos-rel">
             <img src="@News[3].Base64Image" class="img-fluid" />
             <div class="news-info">
-                <div>@News[3].Title</div>
+                <div class="image-title-link" onclick="window.location.href='/NewsInterface/Detail/@News[3].Id'">@News[3].Title</div>
                 <div class="row new-sec-info">
                     <div class="col-5">By Canada</div>
 
@@ -59,7 +59,7 @@
         <div class="col-3 pos-rel">
             <img src="@News[4].Base64Image" class="img-fluid" />
             <div class="news-info">
-                <div>@News[4].Title</div>
+                <div class="image-title-link" onclick="window.location.href='/NewsInterface/Detail/@News[4].Id'">@News[4].Title</div>
                 <div class="row new-sec-info">
                     <div class="col-5">By Canada</div>
 
@@ -72,7 +72,7 @@
         <div class="col-3 pos-rel">                        
             <img src="@News[5].Base64Image" class="img-fluid" />
             <div class="news-info">
-                <div>@News[5].Title</div>
+                <div class="image-title-link" onclick="window.location.href='/NewsInterface/Detail/@News[5].Id'">@News[5].Title</div>
                 <div class="row new-sec-info">
                     <div class="col-5">By Canada</div>
 
