--- a/ImmiCanada/Views/NewsInterface/PartialNewsStudyAboard.cshtml
+++ b/ImmiCanada/Views/NewsInterface/PartialNewsStudyAboard.cshtml
@@ -6,7 +6,7 @@
         <div class="col-6 pos-rel remove-paddingright">
             <img src="@News[0].Base64Image" class="img-fluid full-height" />
             <div class="news-info">
-                <div>@News[0].Title</div>
+                <div class="image-title-link" onclick="window.location.href='/NewsInterface/Detail/@News[0].Id'">@News[0].Title</div>
                 <div class="row new-sec-info">
                     <div class="col-3">By Canada</div>
                     <div class="count-seen">@News[0].NumberOfView</div>
@@ -18,7 +18,7 @@
         <div class="col-6 pos-rel remove-paddingright">
             <img src="@News[1].Base64Image" class="img-fluid full-height" />
             <div class="news-info">
-                <div>@News[1].Title</div>
+                <div class="image-title-link" onclick="window.location.href='/NewsInterface/Detail/@News[1].Id'">@News[1].Title</div>
                 <div class="row new-sec-info">
                     <div class="col-3">By Canada</div>
                     <div class="count-seen">@News[1].NumberOfView</div>
@@ -32,7 +32,7 @@
         <div class="one-third-news-item pos-rel">
             <img src="@News[2].Base64Image" class="img-fluid full-height" />
             <div class="news-info full-width">
-                <div>@News[2].Title</div>
+                <div class="image-title-link" onclick="window.location.href='/NewsInterface/Detail/@News[2].Id'">@News[2].Title</div>
                 <div class="row new-sec-info">
                     <div class="col-3">By Canada</div>
 
@@ -45,7 +45,7 @@
         <div class="one-third-news-item pos-rel">
             <img src="@News[3].Base64Image" class="img-fluid full-height" />
             <div class="news-info full-width">
-                <div>@News[3].Title</div>
+                <div class="image-title-link" onclick="window.location.href='/NewsInterface/Detail/@News[3].Id'">@News[3].Title</div>
                 <div class="row new-sec-info">
                     <div class="col-3">By Canada</div>
 
@@ -58,7 +58,7 @@
         <div class="one-third-news-item pos-rel">
             <img src="@News[4].Base64Image" class="img-fluid full-height" />
             <div class="news-info full-width">
-                <div>@News[4].Title</div>
+                <div class="image-title-link" onclick="window.location.href='/NewsInterface/Detail/@News[4].Id'">@News[4].Title</div>
                 <div class="row new-sec-info">
                     <div class="col-3">By Canada</div>
 
