--- a/ImmiCanada/Content/styles.css
+++ b/ImmiCanada/Content/styles.css
@@ -1431,7 +1431,8 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
         font-size: 15px;
         font-style: italic;
         font-weight: normal;
-        height: 25px;
+        height: 36px;
+        padding-top: 10px;
     }
 
 .news-immigration-story .news-info .new-sec-info .count-seen {
@@ -1442,12 +1443,14 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-size: 15px;
     padding-left: 5px;
     width: 89.4%;
+    padding-top: 6px;
 }
 
     .news-index .new-info-sec-line .news-info .new-sec-info {
         font-size: 13px;
         font-style: italic;
         font-weight: normal;
+        height: 35px;
     }
 
         .news-index .new-info-sec-line .news-info .new-sec-info .count-seen {
@@ -1469,9 +1472,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     padding-left: 19px;
     color: #FFFFFF;
     width: 45px;
-    font-size: 13px;
+    font-size: 11px;
     margin-left: -40px;
     margin-right: 5px;
+    padding-top: 1px;
 }
 
 .count-like {
@@ -1481,8 +1485,9 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     padding-left: 19px;
     color: #FFFFFF;
     width: 45px;
-    font-size: 13px;
+    font-size: 11px;
     margin-right: 5px;
+    padding-top: 1px;
 }
 
 .count-message {
@@ -1492,8 +1497,9 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     padding-left: 19px;
     color: #FFFFFF;
     width: 45px;
-    font-size: 13px;
+    font-size: 11px;
     margin-right: 5px;
+    padding-top: 1px;
 }
 
 .news-list-container .news-item {
@@ -1706,6 +1712,14 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     padding: 10px !important;
     color: #FFFFFF;
     font-size: 20px;
+}
+
+.image-title-link:hover {
+    cursor: pointer;
+}
+
+.slide-news-item:hover {
+    cursor: pointer;
 }
 /* Support for client - BEGIN */
 table.text-editor-supported {
