--- a/ImmiCanada/Views/NewsInterface/PartialNewsImmigrationStory.cshtml
+++ b/ImmiCanada/Views/NewsInterface/PartialNewsImmigrationStory.cshtml
@@ -6,7 +6,7 @@
         <div class="col-8 pos-rel">
             <img src="@News[0].Base64Image" class="img-fluid full-height" />
             <div class="news-info">
-                <div>@News[0].Title</div>
+                <div class="image-title-link" onclick="window.location.href='/NewsInterface/Detail/@News[0].Id'">@News[0].Title</div>
                 <div class="row new-sec-info">
                     <div class="col-2">By Canada</div>
                     <div class="count-seen">@News[0].NumberOfView</div>
@@ -19,7 +19,7 @@
             <div class="row pos-rel">
                 <img src="@News[1].Base64Image" class="img-fluid" />
                 <div class="news-info full-width">
-                    <div>@News[1].Title</div>
+                    <div class="image-title-link" onclick="window.location.href='/NewsInterface/Detail/@News[1].Id'">@News[1].Title</div>
                     <div class="row new-sec-info">
                         <div class="col-4">By Canada</div>
 
@@ -32,7 +32,7 @@
             <div class="row pos-rel pad-top15px">
                 <img src="@News[2].Base64Image" class="img-fluid" />
                 <div class="news-info full-width">
-                    <div>@News[2].Title</div>
+                    <div class="image-title-link" onclick="window.location.href='/NewsInterface/Detail/@News[2].Id'">@News[2].Title</div>
                     <div class="row new-sec-info">
                         <div class="col-4">By Canada</div>
 
@@ -48,7 +48,7 @@
         <div class="one-third-news-item pos-rel">
             <img src="@News[3].Base64Image" class="img-fluid full-height" />
             <div class="news-info full-width">
-                <div>@News[3].Title</div>
+                <div class="image-title-link" onclick="window.location.href='/NewsInterface/Detail/@News[3].Id'">@News[3].Title</div>
                 <div class="row new-sec-info">
                     <div class="col-3">By Canada</div>
 
@@ -61,7 +61,7 @@
         <div class="one-third-news-item pos-rel">
             <img src="@News[4].Base64Image" class="img-fluid full-height" />
             <div class="news-info full-width">
-                <div>@News[4].Title</div>
+                <div class="image-title-link" onclick="window.location.href='/NewsInterface/Detail/@News[4].Id'">@News[4].Title</div>
                 <div class="row new-sec-info">
                     <div class="col-3">By Canada</div>
 
@@ -74,7 +74,7 @@
         <div class="one-third-news-item pos-rel">
             <img src="@News[5].Base64Image" class="img-fluid full-height" />
             <div class="news-info full-width">
-                <div>@News[5].Title</div>
+                <div class="image-title-link" onclick="window.location.href='/NewsInterface/Detail/@News[5].Id'">@News[5].Title</div>
                 <div class="row new-sec-info">
                     <div class="col-3">By Canada</div>
 
