--- a/ImmiCanada/Views/NewsInterface/PartialNewsPolitics.cshtml
+++ b/ImmiCanada/Views/NewsInterface/PartialNewsPolitics.cshtml
@@ -5,7 +5,7 @@
     <div class="row col-12 remove-paddingright one-two-news-item">
         <div class="col-6 pos-rel remove-paddingleft remove-paddingright left-banner">
             <img src="@News[0].Base64Image" class="full-width height297px" />
-            <div class="new-item-main-title pad-left15px pad-top15px pad-bot10px">@News[0].Title</div>
+            <div class="new-item-main-title pad-left15px pad-top15px pad-bot10px image-title-link" onclick="window.location.href='/NewsInterface/Detail/@News[0].Id'">@News[0].Title</div>
             <div class="row new-sec-info pad-left15px">
                 <div class="col-3 grey-text-color">By Canada</div>
                 <div class="count-seen">@News[0].NumberOfView</div>
@@ -20,7 +20,7 @@
             <div class="row right-banner">
                 <div class="col-4 remove-paddingleft remove-paddingright"><img src="@News[1].Base64Image" class="full-width" /></div>
                 <div class="col-8 remove-paddingleft">
-                    <div class="new-item-main-title-left pad-left15px pad-top15px pad-bot10px">@News[1].Title</div>
+                    <div class="new-item-main-title-left pad-left15px pad-top15px pad-bot10px image-title-link" onclick="window.location.href='/NewsInterface/Detail/@News[1].Id'">@News[1].Title</div>
                     <div class="row new-sec-info pad-left15px">
                         <div class="col-5 grey-text-color">By Canada</div>
                         <div class="count-seen">@News[1].NumberOfView</div>
@@ -32,7 +32,7 @@
             <div class="row right-banner mar-top15px">
                 <div class="col-4 remove-paddingleft remove-paddingright"><img src="@News[2].Base64Image" class="full-width" /></div>
                 <div class="col-8 remove-paddingleft">
-                    <div class="new-item-main-title-left pad-left15px pad-top15px pad-bot10px">@News[2].Title</div>
+                    <div class="new-item-main-title-left pad-left15px pad-top15px pad-bot10px image-title-link" onclick="window.location.href='/NewsInterface/Detail/@News[2].Id'">@News[2].Title</div>
                     <div class="row new-sec-info pad-left15px">
                         <div class="col-5 grey-text-color">By Canada</div>
                         <div class="count-seen">@News[2].NumberOfView</div>
@@ -44,7 +44,7 @@
             <div class="row right-banner mar-top15px">
                 <div class="col-4 remove-paddingleft remove-paddingright"><img src="@News[3].Base64Image" class="full-width" /></div>
                 <div class="col-8 remove-paddingleft">
-                    <div class="new-item-main-title-left pad-left15px pad-top15px pad-bot10px">@News[3].Title"</div>
+                    <div class="new-item-main-title-left pad-left15px pad-top15px pad-bot10px image-title-link" onclick="window.location.href='/NewsInterface/Detail/@News[3].Id'">@News[3].Title"</div>
                     <div class="row new-sec-info pad-left15px">
                         <div class="col-5 grey-text-color">By Canada</div>
                         <div class="count-seen">@News[3].NumberOfView"</div>
@@ -56,7 +56,7 @@
             <div class="row right-banner mar-top15px">
                 <div class="col-4 remove-paddingleft remove-paddingright"><img src="@News[4].Base64Image" class="full-width" /></div>
                 <div class="col-8 remove-paddingleft">
-                    <div class="new-item-main-title-left pad-left15px pad-top15px pad-bot10px">@News[4].Title"</div>
+                    <div class="new-item-main-title-left pad-left15px pad-top15px pad-bot10px image-title-link" onclick="window.location.href='/NewsInterface/Detail/@News[4].Id'">@News[4].Title"</div>
                     <div class="row new-sec-info pad-left15px">
                         <div class="col-5 grey-text-color">By Canada</div>
                         <div class="count-seen">@News[4].NumberOfView"</div>
