--- a/ImmiCanada/Views/Shared/_Layout.cshtml
+++ b/ImmiCanada/Views/Shared/_Layout.cshtml
@@ -196,7 +196,7 @@
                 <div class="menu-item pos-rel">
                     <a href="#divImmigrationService" for="divImmigrationService" data-toggle="collapse"
                        aria-controls="divImmigrationService" aria-expanded="false" class="collapsed">DỊCH VỤ NHẬP CƯ</a>
-                    @*<div id="divImmigrationService" aria-expanded="false" class="collapse row">
+                    <div id="divImmigrationService" aria-expanded="false" class="collapse row">
                             <div class="col-sm canada-detail-background">
                                 <div class="main-pri-text">CHƯƠNG TRÌNH NHẬP CƯ CANADA</div>
                                 <img src="Content/images/chatluongcuocsong.jpg" class="full-width" />
@@ -224,7 +224,7 @@
                                     </span>
                                 </div>
                             </div>
-                        </div>*@
+                        </div>
                 </div>
                 <div class="menu-item"><a href="/viec-lam-canada">VIỆC LÀM</a></div>
                 <div class="menu-item"><a href="#">TẠI SAO CHỌN CHÚNG TÔI</a></div>
