--- a/ImmiCanada/Content/styles.css
+++ b/ImmiCanada/Content/styles.css
@@ -60,6 +60,14 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
                 text-decoration: none;
             }
 
+.main-menu-new {
+    background-color: #ed2025;
+}
+
+    .main-menu-new ul.navbar-nav li.nav-item a.nav-link {
+        color: #FFFFFF;
+    }
+
 .full-width {
     width: 100% !important;
 }
@@ -160,6 +168,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     margin-left: 0px !important;
 }
 
+.remove-marginright {
+    right: 0px !important;
+}
+
 .pad-left65px {
     padding-left: 65px;
 }
@@ -169,7 +181,15 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 
 .pad-left15px {
-    padding-left: 15px;
+    padding-left: 15px !important;
+}
+
+.pad-left5px {
+    padding-left: 5px;
+}
+
+.pad-left30px {
+    padding-left: 30px;
 }
 
 .pad-left20px {
@@ -288,6 +308,14 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     min-height: 210px;
 }
 
+.min-height300px {
+    min-height: 300px !important;
+}
+
+.min-height306px {
+    min-height: 306px;
+}
+
 .max-height245px {
     max-height: 245px;
 }
@@ -302,6 +330,14 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 .height297px {
     height: 297px;
+}
+
+.height190px {
+    height: 190px !important;
+}
+
+.width-75Percent {
+    width: 75%;
 }
 
 .font-weight600 {
@@ -1073,6 +1109,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     border: 1px solid #f7eeee;
 }
 
+    .work-search-container .work-item-detail img.img-thumbnail {
+        border: none;
+    }
+
 .work-grey-bk {
     background-color: #cac0c026;
 }
@@ -1720,6 +1760,137 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 .slide-news-item:hover {
     cursor: pointer;
+}
+
+.has-search .form-control {
+    padding-left: 2.375rem;
+}
+
+.has-search .form-control-feedback {
+    position: absolute;
+    z-index: 2;
+    display: block;
+    width: 2.375rem;
+    height: 2.375rem;
+    line-height: 2.375rem;
+    text-align: center;
+    pointer-events: none;
+    color: #aaa;
+}
+
+.display-table {
+    display: table;
+}
+
+.vertical-middle {
+    display: table-cell !important;
+    vertical-align: middle;
+}
+
+.red-main {
+    color: #ed2025;
+}
+
+.check-evaluate {
+    background-color: #FFFFFF;
+}
+
+    .check-evaluate table {
+        height: 100%;
+        background-color: #f5f5f5;
+    }
+
+        .check-evaluate table tr td {
+            padding: 0 0.75rem;
+        }
+
+            .check-evaluate table tr td.evaluate-icon {
+                vertical-align: middle;
+            }
+
+                .check-evaluate table tr td.evaluate-icon i {
+                    font-size: 50px;
+                    color: #ed2025;
+                }
+
+    .check-evaluate .eveluate-text {
+        color: #ed2025;
+        font-size: 25px;
+    }
+
+.study-abroad-canada .study-abroad-canada-text {
+    color: #497bb3;
+    font-size: 25px;
+}
+
+.study-abroad-canada table tr td.study-abroad-canada-icon {
+    vertical-align: middle;
+}
+
+    .study-abroad-canada table tr td.study-abroad-canada-icon i {
+        font-size: 50px;
+        color: #497bb3;
+    }
+
+.login {
+    background-color: #f5f5f5;
+    border-right: 2px solid #e9e9e9;
+}
+
+    .login table tr td {
+        color: #497bb3;
+        padding: 12px 0 0 0;
+        font-size: 20px;
+        font-weight: 700;
+    }
+
+        .login table tr td i {
+            font-size: 35px;
+        }
+
+.logout {
+    background-color: #f5f5f5;
+}
+
+    .logout table tr td {
+        color: #497bb3;
+        padding: 12px 0 0 0;
+        font-size: 20px;
+        font-weight: 700;
+    }
+
+        .logout table tr td i {
+            font-size: 35px;
+        }
+
+#state-flag img {
+    width: 19%;
+    height: 140px;
+}
+
+.text-search-free-evaluate button,
+.text-search-free-evaluate .input-group-prepend {
+    color: #FFFFFF;
+    background-image: linear-gradient(to right, #16eb1d, green);
+}
+
+.gold-opportunity p {
+    font-size: 25px;
+}
+
+.gold-opportunity i {
+    color: #0feb16;
+}
+
+.gold-opportunity img {
+    width: 75%;
+    border: none;
+}
+
+.gold-opportunity .contact-us-image img {
+    width: 25%;
+    float: left;
+    margin-right: 5px;
 }
 /* Support for client - BEGIN */
 table.text-editor-supported {
