--- a/ImmiCanada/Views/Home/Index.cshtml
+++ b/ImmiCanada/Views/Home/Index.cshtml
@@ -160,10 +160,85 @@
             </div> -->
         </div>
     </div>
+    <div class="row pad-top40px">
+        <div class="offset-1 col-sm-10 remove-paddingleft">
+            <img class="card-img-top" src="~/Content/images/lien-he-canada-visa.jpg" />
+        </div>
+    </div>
+    <div class="row pad-top40px">
+        <div class="offset-1 col-sm-10 remove-paddingleft">
+            @{Html.RenderAction("WorkRecommended", "WorkInterface");}
+        </div>
+    </div>
+    <div class="row pad-top40px">
+        <div class="offset-1 col-sm-10 remove-paddingleft">
+            <div class="canada-deserve-to-life pad-left30px">
+                <div class="row col-sm-12 canada-deserve-to-life-title remove-paddingleft">
+                    <img src="Content/images/left-bg.jpg" class="img-left-icon" />
+                    <p>TỈNH BANG</p>
+                    &nbsp; TRỌNG ĐIỂM
+                </div>
+            </div>
+        </div>
+        <div class="offset-1 col-sm-10">
+            <div id="state-flag" class="carousel slide" data-ride="carousel" data-interval="false">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="" src="~/Content/images/UrbanFlags/alberta.jpg" />
+                        <img class="" src="~/Content/images/UrbanFlags/bristish-columbia.jpg" />
+                        <img class="" src="~/Content/images/UrbanFlags/manitoba.jpg" />
+                        <img class="" src="~/Content/images/UrbanFlags/new-brunswicks.jpg" />
+                        <img class="" src="~/Content/images/UrbanFlags/Newfoundland.jpg" />
+                    </div>
+                    <div class="carousel-item">
+                        <img class="" src="~/Content/images/UrbanFlags/nova-scotia.jpg" />
+                        <img class="" src="~/Content/images/UrbanFlags/prince-edward-island.jpg" />
+                        <img class="" src="~/Content/images/UrbanFlags/quebec.jpg" />
+                        <img class="" src="~/Content/images/UrbanFlags/saskatchewa.jpg" />
+                        <img class="" src="~/Content/images/UrbanFlags/Artboard.jpg" />
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-target="#state-flag" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-target="#state-flag" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </button>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="row pad-top40px canada-deserve-to-life document-handling-container" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+        <div class="col-sm-12 document-handling min-height300px">
+            <div class="col-sm-12 document-handling-pri-text">
+                Dịch vụ nhập cư Canada dành cho cá nhân và gia đình Việt Nam
+            </div>
+            <div class="col-sm-10 offset-1 document-handling-sec-text">
+                Canada Visa hỗ trợ các cá nhân và gia đình Việt Nam điều chỉnh các yêu cầu pháp lý, quy định và chính phủ khác nhau xung quanh quá trình nhập cư vào Canada. Mục tiêu của chúng tôi là cung cấp quy trình xin thị thực liền mạch và hiệu quả.
+            </div>
+            <div class="offset-3 col-sm-6 pad-top40px text-search-free-evaluate">
+                <div class="input-group">
+                    <span class="input-group-prepend">
+                        <div class="input-group-text bg-transparent border-right-0"><i class="fa fa-search"></i></div>
+                    </span>
+                    <input class="form-control py-2 border-left-0 border" type="search" value="Kiểm tra cơ hội của bạn ngay bây giờ" id="example-search-input">
+                    <span class="input-group-append">
+                        <button class="btn btn-outline-secondary border-left-0 border" type="button">
+                            ĐÁNH GIÁ MIỄN PHÍ
+                        </button>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="row pad-top40px mar-top60px canada-deserve-to-life">
         <div class="row col-sm-12 canada-deserve-to-life-title">
             <img src="Content/images/left-bg.jpg" class="img-left-icon" />
-            <p>DỊCH VỤ</p>
+            <p>CHƯỜNG TRÌNH</p>
             &nbsp; NỔI BẬT
         </div>
         <div class="row col-sm-12 pad-top40px">
@@ -219,93 +294,135 @@
             @Html.ActionLink("XEM TẤT CẢ", "Index", "Service", null, new { @class = "btn-view-all-services" })
         </div>
     </div>
-</div>
-<div class="row pad-top40px canada-deserve-to-life document-handling-container" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
-    <div class="row col-sm-12 canada-deserve-to-life-title">
-        <img src="Content/images/left-bg.jpg" class="img-left-icon" />
-        <p>QUY TRÌNH</p>
-        &nbsp; XỬ LÝ HỒ SƠ
-    </div>
-    @*<hr class="hoz-line-fee" />*@
-    <div class="col-sm-12 document-handling">
-        <div class="col-sm-12 document-handling-pri-text">
-            DỊCH VỤ VIỆC LÀM ĐẦU TƯ ĐỊNH CƯ CANADA
-        </div>
-        <div class="col-sm-10 offset-1 document-handling-sec-text">
-            Cung cấp dịch vụ nhập cư với sự hỗ trợ của các chuyên gia nhập cư tốt nhất. Chúng tôi hướng dẫn các ứng viên quan tâm lựa chọn các lựa chọn visa PR tốt nhất, đánh giá cơ hội xin visa,
-            hỗ trợ ứng viên trong các thủ tục xin visa và thủ tục PR.
-        </div>
-        <div class="col-sm-12 document-handling-section-detail">
-            <div class="row mar-bottom60px">
-                <div class="col-sm-4 row">
-                    <div class="col-sm-3">
-                        <i class="fa fa-user-plus" aria-hidden="true"></i>
-                    </div>
-                    <div class="col-sm-9 document-handling-section-detail-sec-text">
-                        <p class="document-handling-section-detail-sec-title">Tiếp nhận hồ sơ khách hàng</p>
-                        CANADA VISA tiếp nhận. Luật sư di trú thẩm đinh hoàn toàn đánh giá chuyên sâu về tính đủ điều kiện và kế hoạch nhập cư phù hợp.
-                    </div>
-                </div>
-                <div class="col-sm-4 row">
-                    <div class="col-sm-3">
-                        <i class="fa fa-deaf" aria-hidden="true"></i>
-                    </div>
-                    <div class="col-sm-9 document-handling-section-detail-sec-text">
-                        <p class="document-handling-section-detail-sec-title">Cung cấp và giải pháp</p>
-                        Chúng tôi cung cấp cho bạn các giải pháp phù hợp dựa trên mục tiêu và nhu cầu của bạn.
-                    </div>
-                </div>
-                <div class="col-sm-4 row">
-                    <div class="col-sm-3">
-                        <i class="fa fa-envelope-open-o" aria-hidden="true"></i>
-                    </div>
-                    <div class="col-sm-9 document-handling-section-detail-sec-text">
-                        <p class="document-handling-section-detail-sec-title">Ký kết hợp đồng</p>
-                        Sau khi khách hàng đồng ý tham gia chương trình, CANADA VISA tiền hành soạn thảo ký kết hợp đồng soạn thảo.
-                    </div>
-                </div>
+
+    <div class="row pad-top40px gold-opportunity">
+        <div class="col-sm-5 offset-2">
+            <p><strong>Cơ hội vàng nằm gọn trong tay bạn</strong></p>
+            <div class="pad-top15px">
+                <i class="fa fa-check-circle-o" aria-hidden="true"></i>
+                Đánh giá tính đủ điều kiện của bạn theo luật di trú Canada
             </div>
-            <div class="row mar-bottom30px">
-                <div class="col-sm-4 row">
-                    <div class="col-sm-3">
-                        <i class="fa fa-handshake-o" aria-hidden="true"></i>
-                    </div>
-                    <div class="col-sm-9 document-handling-section-detail-sec-text">
-                        <p class="document-handling-section-detail-sec-title">Quản lý hồ sơ</p>
-                        CANADA VISA lập group để khách hàng tương tác trực tiếp với team xử lý hồ sơ tại Việt Nam.
-                    </div>
-                </div>
-                <div class="col-sm-4 row">
-                    <div class="col-sm-3">
-                        <i class="fa fa-database" aria-hidden="true"></i>
-                    </div>
-                    <div class="col-sm-9 document-handling-section-detail-sec-text">
-                        <p class="document-handling-section-detail-sec-title">Thủ tục giấy tờ</p>
-                        Tiến hành thủ tục giấy tờ, nộp đơn, đệ trình biểu mẫu và tài liệu. Tất cả đều phải được biên soạn chính xác và hoàn thành chính xác và nộp trong thời hạn chặt chẽ. RCIC của chúng tôi thay mặt bạn giải quyết vấn đề này.
-                    </div>
-                </div>
-                <div class="col-sm-4 row">
-                    <div class="col-sm-3">
-                        <i class="fa fa-plane" aria-hidden="true"></i>
-                    </div>
-                    <div class="col-sm-9 document-handling-section-detail-sec-text">
-                        <p class="document-handling-section-detail-sec-title">Kết quả</p>
-                        Chúng tôi thông báo cho bạn về tình trạng và kết quả hồ sơ của bạn từ lúc bắt đầu đến khi hoàn tất.
-                    </div>
-                </div>
+            <div class="pad-top15px">
+                <i class="fa fa-check-circle-o" aria-hidden="true"></i>
+                Bắt đầu quy trình hồ sơ
+            </div>
+            <div class="pad-top15px">
+                <i class="fa fa-check-circle-o" aria-hidden="true"></i>
+                Chuyên nghiệp tư vấn cho bạn các bước cần thiết, đảm bảo tất cả các yêu cầu pháp lý được đáp ứng
+            </div>
+            <p class="pad-top20px"><strong>Liên hệ với chúng tôi hôm nay</strong></p>
+            <div class="contact-us-image">
+                <img class="" src="~/Content/images/Download on the App Store.png" />
+                <img class="" src="~/Content/images/Download on the CH Play.png" />
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <img src="~/Content/images/Gold-Opportunity.jpg" class="img-thumbnail" />
+        </div>
+    </div>
+
+    <div class="row pad-top40px why-choose-us">
+        <div class="col-sm-4 offset-1">
+            <img class="img-thumbnail" src="~/Content/images/tiepcanthitruongtoancau.png" />
+        </div>
+        <div class="row col-sm-6 ">
+            <div class="col-sm-6">
+                <i class="fa fa-check-circle-o" aria-hidden="true"></i>
+                Các đánh giá tích cực đã được xác minh với hồ sơ thành công tuyệt vời
+            </div>
+            <div class="col-sm-6">
+                <i class="fa fa-check-circle-o" aria-hidden="true"></i>
+                Các đánh giá tích cực đã được xác minh với hồ sơ thành công tuyệt vời
             </div>
         </div>
     </div>
-</div>
-<div class="row pad-top40px canada-map" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
-    <div class="col-sm-12 pos-rel">
-        <img class="img-fluid full-width" src="Content/images/map canada.png" />
-        <div class="canada-map-des">
-            <p class="canada-map-first-text">CANADA</p>
-            <p class="canada-map-sec-text">NƠI HẠNH PHÚC NGẬP TRÀN</p>
+    </div>
+    <div class="row pad-top40px canada-deserve-to-life document-handling-container" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+        <div class="row col-sm-12 canada-deserve-to-life-title">
+            <img src="Content/images/left-bg.jpg" class="img-left-icon" />
+            <p>QUY TRÌNH</p>
+            &nbsp; XỬ LÝ HỒ SƠ
+        </div>
+        @*<hr class="hoz-line-fee" />*@
+        <div class="col-sm-12 document-handling">
+            <div class="col-sm-12 document-handling-pri-text">
+                DỊCH VỤ VIỆC LÀM ĐẦU TƯ ĐỊNH CƯ CANADA
+            </div>
+            <div class="col-sm-10 offset-1 document-handling-sec-text">
+                Cung cấp dịch vụ nhập cư với sự hỗ trợ của các chuyên gia nhập cư tốt nhất. Chúng tôi hướng dẫn các ứng viên quan tâm lựa chọn các lựa chọn visa PR tốt nhất, đánh giá cơ hội xin visa,
+                hỗ trợ ứng viên trong các thủ tục xin visa và thủ tục PR.
+            </div>
+            <div class="col-sm-12 document-handling-section-detail">
+                <div class="row mar-bottom60px">
+                    <div class="col-sm-4 row">
+                        <div class="col-sm-3">
+                            <i class="fa fa-user-plus" aria-hidden="true"></i>
+                        </div>
+                        <div class="col-sm-9 document-handling-section-detail-sec-text">
+                            <p class="document-handling-section-detail-sec-title">Tiếp nhận hồ sơ khách hàng</p>
+                            CANADA VISA tiếp nhận. Luật sư di trú thẩm đinh hoàn toàn đánh giá chuyên sâu về tính đủ điều kiện và kế hoạch nhập cư phù hợp.
+                        </div>
+                    </div>
+                    <div class="col-sm-4 row">
+                        <div class="col-sm-3">
+                            <i class="fa fa-deaf" aria-hidden="true"></i>
+                        </div>
+                        <div class="col-sm-9 document-handling-section-detail-sec-text">
+                            <p class="document-handling-section-detail-sec-title">Cung cấp và giải pháp</p>
+                            Chúng tôi cung cấp cho bạn các giải pháp phù hợp dựa trên mục tiêu và nhu cầu của bạn.
+                        </div>
+                    </div>
+                    <div class="col-sm-4 row">
+                        <div class="col-sm-3">
+                            <i class="fa fa-envelope-open-o" aria-hidden="true"></i>
+                        </div>
+                        <div class="col-sm-9 document-handling-section-detail-sec-text">
+                            <p class="document-handling-section-detail-sec-title">Ký kết hợp đồng</p>
+                            Sau khi khách hàng đồng ý tham gia chương trình, CANADA VISA tiền hành soạn thảo ký kết hợp đồng soạn thảo.
+                        </div>
+                    </div>
+                </div>
+                <div class="row mar-bottom30px">
+                    <div class="col-sm-4 row">
+                        <div class="col-sm-3">
+                            <i class="fa fa-handshake-o" aria-hidden="true"></i>
+                        </div>
+                        <div class="col-sm-9 document-handling-section-detail-sec-text">
+                            <p class="document-handling-section-detail-sec-title">Quản lý hồ sơ</p>
+                            CANADA VISA lập group để khách hàng tương tác trực tiếp với team xử lý hồ sơ tại Việt Nam.
+                        </div>
+                    </div>
+                    <div class="col-sm-4 row">
+                        <div class="col-sm-3">
+                            <i class="fa fa-database" aria-hidden="true"></i>
+                        </div>
+                        <div class="col-sm-9 document-handling-section-detail-sec-text">
+                            <p class="document-handling-section-detail-sec-title">Thủ tục giấy tờ</p>
+                            Tiến hành thủ tục giấy tờ, nộp đơn, đệ trình biểu mẫu và tài liệu. Tất cả đều phải được biên soạn chính xác và hoàn thành chính xác và nộp trong thời hạn chặt chẽ. RCIC của chúng tôi thay mặt bạn giải quyết vấn đề này.
+                        </div>
+                    </div>
+                    <div class="col-sm-4 row">
+                        <div class="col-sm-3">
+                            <i class="fa fa-plane" aria-hidden="true"></i>
+                        </div>
+                        <div class="col-sm-9 document-handling-section-detail-sec-text">
+                            <p class="document-handling-section-detail-sec-title">Kết quả</p>
+                            Chúng tôi thông báo cho bạn về tình trạng và kết quả hồ sơ của bạn từ lúc bắt đầu đến khi hoàn tất.
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-</div>
-@{Html.RenderAction("InterestedSection", "Home");}
-@*<hr class="news-line-top" />*@
-@{Html.RenderAction("NewsSlide", "Home");}
+    <div class="row pad-top40px canada-map" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+        <div class="col-sm-12 pos-rel">
+            <img class="img-fluid full-width" src="Content/images/map canada.png" />
+            <div class="canada-map-des">
+                <p class="canada-map-first-text">CANADA</p>
+                <p class="canada-map-sec-text">NƠI HẠNH PHÚC NGẬP TRÀN</p>
+            </div>
+        </div>
+    </div>
+    @{Html.RenderAction("InterestedSection", "Home");}
+    @*<hr class="news-line-top" />*@
+    @{Html.RenderAction("NewsSlide", "Home");}
