--- a/ImmiCanada/Views/Home/Index.cshtml
+++ b/ImmiCanada/Views/Home/Index.cshtml
@@ -323,16 +323,43 @@
 
     <div class="row pad-top40px why-choose-us">
         <div class="col-sm-4 offset-1">
-            <img class="img-thumbnail" src="~/Content/images/tiepcanthitruongtoancau.png" />
+            <img class="img-thumbnail full-height" src="~/Content/images/tiepcanthitruongtoancau.png" />
         </div>
-        <div class="row col-sm-6 ">
-            <div class="col-sm-6">
-                <i class="fa fa-check-circle-o" aria-hidden="true"></i>
+        <div class="row col-sm-6 why-choose-us-grey-bk">
+            <div class="col-sm-12">
+                <p><strong>Tại sao chọn chúng tôi</strong></p>
+            </div>
+            <div class="col-sm-1 mar-top20x"><i class="fa fa-star" aria-hidden="true"></i></div>
+            <div class="col-sm-5 mar-top20x">
                 Các đánh giá tích cực đã được xác minh với hồ sơ thành công tuyệt vời
             </div>
-            <div class="col-sm-6">
-                <i class="fa fa-check-circle-o" aria-hidden="true"></i>
-                Các đánh giá tích cực đã được xác minh với hồ sơ thành công tuyệt vời
+            <div class="col-sm-1 mar-top20x"><i class="fa fa-check-circle-o" aria-hidden="true"></i></div>
+            <div class="col-sm-5 mar-top20x">
+                Dịch vụ nhanh chóng, dễ dàng và thuận tiện với việc nộp đơn đăng ký trực tuyến
+            </div>
+            <div class="col-sm-1 mar-top20x"><i class="fa fa-diamond" aria-hidden="true"></i></div>
+            <div class="col-sm-5 mar-top20x">
+                Phí rất cạnh tranh và phải chăng với các gói thanh toán linh hoạt
+            </div>
+            <div class="col-sm-1 mar-top20x"><i class="fa fa-university" aria-hidden="true"></i></div>
+            <div class="col-sm-5 mar-top20x">
+                Quy trình hoàn toàn minh bạch và rõ ràng để cung cấp thông tin cho bạn
+            </div>
+            <div class="col-sm-1 mar-top20x"><i class="fa fa-cube" aria-hidden="true"></i></div>
+            <div class="col-sm-5 mar-top20x">
+                Tư vấn chi tiết và tư vấn pháp lý từ các tư vấn di trú đủ điều kiện
+            </div>
+            <div class="col-sm-1 mar-top20x"><i class="fa fa-diamond" aria-hidden="true"></i></div>
+            <div class="col-sm-5 mar-top20x">
+                Các giải pháp nhập cư hoàn chỉnh và hiệu quả từ đầu đến cuối
+            </div>
+            <div class="col-sm-1 mar-top20x"><i class="fa fa-heart" aria-hidden="true"></i></div>
+            <div class="col-sm-5 mar-top20x">
+                Theo dõi và xem xét lại quy trình để đảm bảo tiêu chuẩn dịch vụ cao nhất
+            </div>
+            <div class="col-sm-1 mar-top20x"><i class="fa fa-plane" aria-hidden="true"></i></div>
+            <div class="col-sm-5 mar-top20x">
+                Quan trọng nhất: giúp bạn đạt được hiệu quả tích cực
             </div>
         </div>
     </div>
@@ -414,7 +441,7 @@
             </div>
         </div>
     </div>
-    <div class="row pad-top40px canada-map" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+    @*<div class="row pad-top40px canada-map" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
         <div class="col-sm-12 pos-rel">
             <img class="img-fluid full-width" src="Content/images/map canada.png" />
             <div class="canada-map-des">
@@ -422,7 +449,8 @@
                 <p class="canada-map-sec-text">NƠI HẠNH PHÚC NGẬP TRÀN</p>
             </div>
         </div>
-    </div>
+    </div>*@
+    <div class="pad-top40px">&nbsp;</div>
     @{Html.RenderAction("InterestedSection", "Home");}
     @*<hr class="news-line-top" />*@
-    @{Html.RenderAction("NewsSlide", "Home");}
+    @*@{Html.RenderAction("NewsSlide", "Home");}*@
