--- a/ImmiCanada/Views/Shared/_LayoutNew.cshtml
+++ b/ImmiCanada/Views/Shared/_LayoutNew.cshtml
@@ -18,8 +18,11 @@
         <div class="row top-banner">
             <div class="col-sm-6">&nbsp;</div>
             <div class="col-sm-6 text-right pad-right30px">
-                Liên hệ với chúng tôi: &nbsp;&nbsp;&nbsp;<i class="fa fa-phone mar-right3px" aria-hidden="true"></i>0948 00 9988 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <i class="fa fa-envelope-o" aria-hidden="true"></i> Email: info@canadavisa.vn
+                Chính sách bảo mật&nbsp;&nbsp;| &nbsp;&nbsp;Blog&nbsp;&nbsp;
+                <i class="fa fa-facebook" aria-hidden="true"></i>&nbsp;
+                <i class="fa fa-envelope-o" aria-hidden="true"></i>&nbsp;
+                <i class="fa fa-phone" aria-hidden="true"></i>&nbsp;
+                <i class="fa fa-youtube-play" aria-hidden="true"></i>&nbsp;
             </div>
         </div>
     </div>
