--- a/ImmiCanada/Content/styles.css
+++ b/ImmiCanada/Content/styles.css
@@ -300,6 +300,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     margin-top: 15px;
 }
 
+.mar-top20x {
+    margin-top: 20px;
+}
+
 .mar-top60px {
     margin-top: 60px;
 }
@@ -1892,6 +1896,25 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     float: left;
     margin-right: 5px;
 }
+
+.why-choose-us {
+    
+}
+
+    .why-choose-us i {
+        font-size: 45px;
+        color: #ed2025;
+    }
+
+.why-choose-us-grey-bk {
+    background-color: #f1f3f2;
+    padding-bottom: 30px;
+}
+
+    .why-choose-us-grey-bk p {
+        font-size: 25px;
+        margin-left: -30px;
+    }
 /* Support for client - BEGIN */
 table.text-editor-supported {
     border: 0;
