--- a/ImmiCanada/Views/WorkInterface/Index.cshtml
+++ b/ImmiCanada/Views/WorkInterface/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     @model ImmiCanada.Controllers.ServiceSearchCriteria
-    Layout = "~/Views/Shared/_Layout_Without_Banner.cshtml";
+    //Layout = "~/Views/Shared/_Layout_Without_Banner.cshtml";
     ViewBag.Title = "Danh sách việc làm";
 
     var works = (List<ImmiCanada.Entities.Work>)ViewData["works"];
