--- a/ImmiCanada/Views/WorkInterface/WorkRecommended.cshtml
+++ b/ImmiCanada/Views/WorkInterface/WorkRecommended.cshtml
@@ -41,61 +41,80 @@
         </div>
     </div>
     <div class="search-result work-while-bk work-search-container">
-        
-        <div class="row mar-bottom20px pad-top10px">
-            @{
-                for (int i = 0; i < works.Count; i++)
-                {
-                    <div class="col-sm-6 mar-top15px">
-                        <div class='row min-height306px work-item-detail @(i % 2 == 0 ? "remove-marginleft" : "") '>
-                            <div class="col-5">
-                                <img class="img-thumbnail work-detail-img height190px" src="@works[i].Base64Image" />
-                            </div>
-                            <div class="col-7">
-                                <div class="row work-detail-title mar-bottom10px"><strong>@works[i].Title</strong></div>
-                                <div class="row mar-bottom20px font-size14px">
-                                    Lượt xem: @works[i].NumberOfView | Cấp độ kỹ năng: @works[i].Noc.Title | Mã NOC: @works[i].WorkNumber
-                                </div>
-                                <div class="row mar-bottom10px">
-                                    <i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp;&nbsp;
-                                    <strong>Yêu cầu ngôn ngữ:</strong> &nbsp;&nbsp;@works[i].Language
-                                </div>
-                                <div class="row mar-bottom10px">
-                                    <i class="fa fa-university" aria-hidden="true"></i> &nbsp;&nbsp;
-                                    <strong>Yêu cầu bằng cấp: </strong>&nbsp;&nbsp;@works[i].Certificate
-                                </div>
-                                <div class="row mar-bottom10px">
-                                    <i class="fa fa-usd" aria-hidden="true"></i> &nbsp;&nbsp;
-                                    <strong>Mức lương:</strong>&nbsp;&nbsp; @works[i].Income
-                                </div>
-                                <div class="row text-right">
-                                    <div class="col-12">
-                                        <input type="button" id="btnWorkDetail" value="XEM CHI TIẾT" class="btn-work-detail mar-bottom30px" onclick="javascript: window.location.href = '@GetWorkDetailUrl(works[i])'" />
+
+        <div id="work-recommended-cal" class="carousel slide full-width" data-ride="carousel" data-interval="false">
+            <ul class="carousel-indicators">
+                <li data-target="#work-recommended-cal" data-slide-to="0" class="active"></li>
+                <li data-target="#work-recommended-cal" data-slide-to="1"></li>
+                <li data-target="#work-recommended-cal" data-slide-to="2"></li>
+            </ul>
+            <div class="carousel-inner">
+
+                @{
+                    for (int i = 0; i < works.Count; i++)
+                    {
+                        if (i % 4 == 0)
+                        {
+                            @:<div class="carousel-item @(i == 0 ? "active" : "")">
+                                @:<div class="row pos-rel">
+                                }
+
+                                <div class="col-sm-6 mar-top15px">
+                                    <span class="top-right-hot">HOT</span>
+                                    <div class="row pad-top15px work-item-detail remove-marginleft ">
+                                        <div class="col-4">
+                                            <img class="img-thumbnail work-detail-img" src="@works[i].Base64Image">
+                                        </div>
+                                        <div class="col-8">
+                                            <div class="row work-detail-title mar-bottom10px"><strong title="@works[i].Title">@works[i].Title</strong></div>
+                                            <div class="row mar-bottom20px font-size12px">
+                                                Lượt xem: @works[i].NumberOfView | Cấp độ kỹ năng: @works[i].Noc.Title | Mã NOC: @works[i].WorkNumber
+                                            </div>
+                                            <div class="row mar-bottom10px">
+                                                <i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp;&nbsp;
+                                                <strong>Yêu cầu ngôn ngữ:</strong> &nbsp;&nbsp;@works[i].Language
+                                            </div>
+                                            <div class="row mar-bottom10px">
+                                                <i class="fa fa-university" aria-hidden="true"></i> &nbsp;&nbsp;
+                                                <strong>Yêu cầu bằng cấp: </strong>&nbsp;&nbsp;@works[i].Certificate
+                                            </div>
+                                            <div class="row mar-bottom10px">
+                                                <i class="fa fa-usd" aria-hidden="true"></i> &nbsp;&nbsp;
+                                                <strong>Mức lương:</strong>&nbsp;&nbsp; @works[i].Income
+                                            </div>
+                                            <div class="row text-right">
+                                                <div class="col-12">
+                                                    <input type="button" id="btnWorkDetail" value="XEM CHI TIẾT" class="btn-work-detail mar-bottom10px" onclick="javascript: window.location.href = '@GetWorkDetailUrl(works[i])''">
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
 
-
-                }
-            }
-
-        </div>
-        <div class="row mar-top40px">
-            <div class="col-12">
-                <ul class="pagination">
-                    @*<li class="page-item"><a class="page-link" href="javascript: window.location.href='/WorkInterface/search?page=1'">Previous</a></li>*@
-                    @{
-                        for (int i = 0; i < totalPage; i++)
-                        {
-                            <li class="page-item"><a class="page-link" href="javascript: window.location.href='@GetWorkPageUrl(i+1)'">@(i+1)</a></li>
+                                if (i % 4 == 3)
+                                {
+                                @:</div>
+                            @:</div>
                         }
+
                     }
-                    @*<li class="page-item"><a class="page-link" href="javascript: window.location.href='/WorkInterface/search?page=1'">Next</a></li>*@
-                </ul>
+                }
+
             </div>
-        </div>
+
+
+        @*</div>
+            <button class="carousel-control-prev" type="button" data-target="#work-recommended-cal" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-target="#work-recommended-cal" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </button>
+        </div>*@
 
     </div>
 </div>
+</div>
+
