--- a/ImmiCanada/Views/Shared/_LayoutNew.cshtml
+++ b/ImmiCanada/Views/Shared/_LayoutNew.cshtml
@@ -7,9 +7,16 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    @*<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />*@
     
     @Scripts.Render("~/bundles/jquery")
+    @{ 
+        var banner = "/Content/images/banner-canada-visa.jpg";
+        if (ViewData["mainbanner"] != null)
+        {
+            banner = ViewData["mainbanner"].ToString();
+        }
+    }
 </head>
 <body>
     <div id="fb-root"></div>
@@ -27,7 +34,7 @@
         </div>
     </div>
     <div class="full-width">
-        <div class="container-fluid">
+        <div class="container-fluid remove-paddingright">
             <div class="row">
                 <div class="offset-2 col-sm-2">
                     <img src="~/Content/images/logo.png" class="img-fluid main-logo" />
@@ -46,7 +53,7 @@
 
             </div>
             <div class="row main-menu-new">
-                <nav class="navbar navbar-expand-sm offset-2 col-sm-11 remove-marginright">
+                <nav class="navbar navbar-expand-sm offset-2 col-sm-10 remove-marginright">
                     <!-- Links -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -106,7 +113,7 @@
                         </li>
                     </ul>
                 </nav>
-                <img class="card-img-top" src="~/Content/images/banner-canada-visa.jpg" />
+                <img class="card-img-top" src="@banner" />
             </div>
             <div class="row">
                 <div class="row offset-1 col-sm-10">
@@ -117,7 +124,7 @@
                                 <td rowspan="2" class="evaluate-icon"><i class="fa fa-paper-plane" aria-hidden="true"></i></td>
                             </tr>
                             <tr>
-                                <td>Tìm hiểu xem bạn có đủ điều kiện để nhập cư Canada</td>
+                                <td class="pad-bot10px">Tìm hiểu xem bạn có đủ điều kiện để nhập cư Canada</td>
                             </tr>
                         </table>
                     </div>
@@ -128,7 +135,7 @@
                                 <td rowspan="2" class="study-abroad-canada-icon"><i class="fa fa-file-text-o" aria-hidden="true"></i></td>
                             </tr>
                             <tr>
-                                <td>Tìm hiểu xem bạn có đủ điều kiện để trở thành sinh viên tại Canada</td>
+                                <td class="pad-bot10px">Tìm hiểu xem bạn có đủ điều kiện để trở thành sinh viên tại Canada</td>
                             </tr>
                         </table>
                     </div>
@@ -193,10 +200,10 @@
         </div>
     </div>
 
+    @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/mainscript")
     @RenderSection("scripts", required: false)
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    @Scripts.Render("~/bundles/bootstrap")
 </body>
 </html>
